[package]
name = "cryptoconditions"
version = "0.1.3"
authors = ["Scott Sadler <me@scottsadler.de>", "dimxy <dimxy@komodoplatform.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cryptoconditions"       
#crate-type = ["rlib", "dylib"]
crate-type = ["cdylib"]

[dependencies]
asn1 = { git = "https://github.com/alex/rust-asn1", branch = "main" }
libsecp256k1 = "0.6.0"
simple_asn1 = { git = "https://github.com/ssadler/simple_asn1" }
num-bigint = "0.2.6"
num-traits = "0.2"
sha2 = "0.8.0"
wasm-bindgen = "0.2.8"
js-sys = "0.3"
cfg-if = "0.1"
log = "0.4"
console_log = { version = "0.2", optional = true }
base64 = "*"
hex = "*"
file = "*"
ripemd = "0.1.1"

[dev-dependencies]
rustc-hex = "2"
serde_json = "1.0"

[features]
default = ["console_log"]
